<resources>
    <string name="app_name">DynamicGroceryApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_number">Phone Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Logo" />
    <string name="CreateAccount">Create Account</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="prompt_passwordRecovery">Password Recovery</string>
    <string name="recover">Recover</string>
    <string name="addfriend">Add Friend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_the_user_information">Add the User Information</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name</string>string>
    <string name="Groups">Groups</string>
    <string name="List">List</string>
    <string name="list">list</string>
    <string name="group">group</string>
    <string name="plus">+</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">"    Sign In    "</string>
    <string name="create_new_group">Create New Group</string>
    <string name="description_of_group">Description Of Group</string>
    <string name="add_members">Add Members</string>
    <string name="group_name">Group Name</string>
    <string name="changeImage">Change Image</string>
    <string name="changePassword">New Password</string>
    <string name="updateInformation">Update Account</string>
    <string name="logout">Logout</string>
    <string name="Members">Members</string>
    <string name="shopping_list">Shopping List</string>
    <string name="item">item</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_by_email">Add By Email</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="pfp">pfp</string>
    <string name="Delete">Delete</string>


</resources>