<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_recovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accountrecovery.AccountRecoveryFragment">

    <TextView
        android:id="@+id/passwordRecoverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/prompt_passwordRecovery"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textFieldEmailRecover"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRecoverLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/recover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmailRecover" />
</androidx.constraintlayout.widget.ConstraintLayout>